# aws-lambda-rust-runtime

./: Cargo.toml
fishrock-lambda-http/: Cargo.toml
fishrock-lambda-http/examples/: hello-http.rs
fishrock-lambda-runtime/: Cargo.toml
fishrock-lambda-runtime/examples/: basic.rs  error-handling.rs
