[package]
name = "fishrock_lambda_http"
version = "0.3.0-patched.1"
authors = ["Doug Tangren"]
edition = "2018"
description = "Application Load Balancer and API Gateway event types for AWS Lambda"
keywords = ["AWS", "Lambda", "APIGateway", "ALB", "API"]
license = "Apache-2.0"
homepage = "https://github.com/awslabs/aws-lambda-rust-runtime"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
documentation = "https://docs.rs/lambda_runtime"
categories = ["web-programming::http-server"]
readme = "../README.md"

[badges]
travis-ci = { repository = "awslabs/aws-lambda-rust-runtime" }
maintenance = { status = "actively-developed" }

[dependencies]
base64 = "0.13.0"
http = "0.2"
lambda_runtime = { path = "../fishrock-lambda-runtime", version = "0.3.0-patched.1", package = "fishrock_lambda_runtime" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_urlencoded = "0.7.0"

[dev-dependencies]
log = "^0.4"
maplit = "1.0"
tokio = { version = "1.0", features = ["macros"] }
